# Naya

./: .clangd  .eslintrc.js  .gitignore  .prettierrc.js  .watchmanconfig  App.tsx  CLANGD_SETUP.md  README.md  app.json  build_simulator.sh  compile_commands.json  metro.config.js  package-lock.json  package.json  test_clangd.sh  test_ffmpeg_installation.sh  tsconfig.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle  copy-ffmpeg-libs.sh
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
docs/: ARCHITECTURE_MODULAIRE.md  AUDIO_RECORDER_USAGE.md  CODEGEN_REGENERATION.md  EXEMPLE_PROCESSUS_COMPLET.md  FFMPEG_INSTALLATION.md  FFMPEG_TURBOMODULE_STATUS.md  GUIDE.md  GUIDE_MODULES_NATIFS.md  MOCK_SYSTEM.md  Naya Native System – TurboModules C++ Guide.md  SETUP_EGALIZER_AUDIO.md  reglecplus.md
installed/arm64/lib/: libavdevice.61.3.100.dylib  libavfilter.10.4.100.dylib  libavformat.61.7.100.dylib  libavutil.59.39.100.dylib  libswresample.5.3.100.dylib  libswscale.8.3.100.dylib
installed/framework-sim/libavformat.framework/: libavformat
installed/framework-sim/libavutil.framework/: libavutil
installed/framework/libavdevice.framework/: libavdevice
installed/framework/libavfilter.framework/: Info.plist  libavfilter
installed/framework/libavformat.framework/: libavformat
installed/framework/libavutil.framework/: libavutil
installed/framework/libswscale.framework/: libswscale
installed/x86_64/lib/: libavformat.61.7.100.dylib  libavutil.59.39.100.dylib  libswresample.5.3.100.dylib  libswscale.8.3.100.dylib
installed/xcframeworks/: integrate_xcframeworks.sh
installed/xcframeworks-universal/: integrate_universal.sh
installed/xcframeworks-universal/libavcodec.xcframework/: Info.plist
ios/: .xcode.env.local  NativeAudioEqualizerProvider.h  NativeAudioEqualizerProvider.mm  NativeAudioRecorderProvider.h  NativeAudioRecorderProvider.mm  NativeFFmpegModuleProvider.h  NativeFFmpegModuleProvider.mm  NativeModuleEQProvider.h  NativeModuleEQProvider.mm  Podfile
ios/Frameworks/: clean_signatures.sh
ios/Frameworks/libavcodec.xcframework/: Info.plist
ios/Frameworks/libavdevice.xcframework/: Info.plist
ios/Frameworks/libavfilter.xcframework/: Info.plist
ios/Frameworks/libavformat.xcframework/: Info.plist
ios/Frameworks/libavutil.xcframework/: Info.plist
ios/Frameworks/libswresample.xcframework/: Info.plist
ios/Frameworks/libswscale.xcframework/: Info.plist
ios/Naya/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/Naya.xcodeproj/: project.pbxproj  project.pbxproj.backup  project.pbxproj.backup2
ios/Naya.xcworkspace/: contents.xcworkspacedata
specs/: NativeAudioEngine.ts.bak  NativeAudioEqualizer.ts  NativeAudioRecorder.ts  NativeFFmpegModule.ts  NativeModuleEQ.ts
src/audio/: AudioInterface.refactored.ts  AudioInterface.ts  AudioModuleWrapper.ts  AudioUtils.ts  README.md  enums.ts  index.ts  moduleParameters.ts  types.ts
src/audio/core/: AudioModule.ts  AudioPipeline.ts
src/audio/types/: AudioTypes.ts
src/components/audio/: AudioInterfaceView.tsx  AudioRecorderTest.tsx  AudioRecorderView.tsx  FFmpegTestComponent.tsx  ModuleRack.tsx  PresetManager.tsx  SystemMetrics.tsx  index.ts
src/components/equalizer/: AudioFileSelector.tsx  EqualizerBand.tsx  EqualizerPanel.tsx  PresetSelector.tsx  index.ts  types.ts
src/config/: audio.config.ts  themes.ts
src/constants/: AudioPresets.ts
src/contexts/: ThemeContext.tsx
src/hooks/: useSystemTheme.ts
src/i18n/: ARCHITECTURE_SUMMARY.md  MIGRATION_GUIDE.md  README.md  index.ts  jest.config.js
src/i18n/__tests__/: i18n.test.ts  setup.ts
src/i18n/config/: reactNative.ts
src/i18n/constants/: index.ts
src/i18n/contexts/: I18nContext.tsx
src/i18n/core/: i18nManager.ts
src/i18n/examples/: BasicUsage.tsx
src/i18n/hoc/: withTranslation.tsx
src/i18n/hooks/: index.ts  useCurrencyFormatter.ts  useDateFormatter.ts  useI18nContext.ts  useLanguageDetector.ts  useTranslation.ts
src/i18n/providers/: TranslationProvider.tsx
src/i18n/services/: LanguageDetector.ts  PersistenceManager.ts  TranslationLoader.ts
src/i18n/types/: index.ts
src/i18n/utils/: EventEmitter.ts  index.ts
src/native/: AudioEngineMock.ts  FFmpegTestModule.h  MockDataGenerator.ts  NativeAudioEqualizer.cpp  NativeAudioEqualizer.h  NativeAudioRecorder.h  NativeFFmpegModule.cpp  NativeFFmpegModule.h  NativeModuleEQ.cpp  NativeModuleEQ.h
src/native/AudioRecord/: AudioBufferPool.cpp  AudioBufferPool.h  AudioCaptureCpp.cpp  AudioCaptureCpp.h  AudioCaptureInterface.h  AudioDSPFactory.cpp  AudioDSPInterface.h  AudioDSPProcessors.cpp  AudioDSPProcessors.h  AudioEncoderInterface.h  AudioEncoders.cpp  AudioEncoders.h  AudioRecorder.cpp  AudioRecorder.h  AudioStructs.h  NativeAudioRecorder.cpp  NativeAudioRecorder.h  PlatformAudioCapture.cpp  PlatformAudioCapture.h
src/native/AudioRecord/tests/: AudioDSPTest.cpp  AudioEncodersTest.cpp  AudioRecorderTest.cpp  CMakeLists.txt  PlatformAudioCaptureTest.cpp  README_NOUVEAUX_TESTS.md  run_tests.sh
src/native/AudioRecord/tests/build_quick_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/native/analysis/: SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  VoiceDetector.cpp  VoiceDetector.h
src/native/audio/: AudioProcessor.cpp  AudioProcessor.h  EQEngine.cpp  EQEngine.h
src/native/dsp/: FFTProcessor.cpp  FFTProcessor.h  Filters.cpp  Filters.h
src/native/effects/: AudioEnhancer.cpp  AudioEnhancer.h  Compressor.cpp  Compressor.h  Echo.cpp  Echo.h  EffectSuppression.cpp  EffectSuppression.h  NoiseReduction.cpp  NoiseReduction.h  Normalizer.cpp  Normalizer.h  Reverb.cpp  Reverb.h
src/native/presets/: DefaultPresets.cpp  DefaultPresets.h  PresetManager.cpp  PresetManager.h
src/native/utils/: AudioFormats.cpp  AudioFormats.h  FileManager.cpp  FileManager.h
src/native/video/: VideoAudioExtractor.cpp  VideoAudioExtractor.h  VideoProcessor.cpp  (+1 more)
src/screens/: EqualizerScreen.tsx
src/theme/: index.ts
src/utils/: AudioQualityHelper.ts  styleHelpers.ts
src/video/: README.md
temp_project/: package-lock.json  package.json
(+168 files in other folders)
